# CaiZi

./: .bazelrc  .gitignore  CaiZi.code-workspace  README.md  WORKSPACE  requirements.in  requirements.txt  test_hf.ipynb
.devcontainer/: Dockerfile  devcontainer.json  prometheus.yml  start_grafana.sh  start_prometheus.sh
config/: BUILD.bazel  gpt2.yaml  openwebtext.yaml  shakespeare.yaml
dataset/: hai_zi_wang.txt  qi_wang.txt  shu_wang.txt  xjtu_1.txt
dataset/openwebtext/: prepare.py
dataset/shakespeare_char/: readme.md
model_weights/: BUILD.bazel
notebook/: gpt2_openweb.ipynb  gpt2_shakespear.ipynb  main.ipynb  test_batch.ipynb
script/: convert_openwebtext_parquet.py  downlaod_model.py  prepare_data.ipynb  prepare_openwebtext_chunk_ids.ipynb  prepare_openwebtext_shards.ipynb  prepare_shakespeare_chunk_ids.ipynb  test_shakespere.ipynb
script/prepare_data/: prepare_openwebtext_chunk_ids.ipynb  prepare_openwebtext_shards.ipynb  prepare_shakespeare_chunk_ids.ipynb
script/train/: train_gpt2_with_opentextweb.py
src/: BUILD.bazel  chunk_processor.py  config.py  datasource_processor.py  document_processor.py  fundation_model_trainer.py  multihead_attention.py  text_generator.py  text_split_processor.py  token_processor.py  utility.py
src/model/: BUILD.bazel  GPT.py  gpt_lr_scheduler.py  layer_norm.py  mlp.py  multihead_attention.py  transformer_block.py
src/preprocessor/: BUILD.bazel  chunk_processor.py  datasource_processor.py  text_split_processor.py  token_processor.py
test/: BUILD.bazel  test_chunk_processor.py  test_datasource_processor.py  test_document_processor.py  test_fundation_model_trainer.py  test_multihead_attention.py  test_text_generator.py  test_text_split_processor.py  test_token_processor.py  test_utility.py
test/model/: BUILD.bazel  test_GPT.py  test_gpt_lr_scheduler.py  test_multihead_attention.py  test_transformer_block.py
test/preprocessor/: BUILD.bazel  test_chunk_processor.py  test_datasource_processor.py  test_text_split_processor.py  test_token_processor.py
