py_library(
    name = "config",
    srcs = ["config.py"],
    data = ["//config:config_file"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "document_processor",
    srcs = ["document_processor.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "token_processor",
    srcs = ["token_processor.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "chunk_processor",
    srcs = ["chunk_processor.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name="multihead_attention",
    srcs=["multihead_attention.py"],
    visibility = ["//visibility:public"],
)