py_library(
    name = "config",
    srcs = ["config.py"],
    data = ["//config:config_file"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "document_processor",
    srcs = ["document_processor.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "token_processor",
    srcs = ["token_processor.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "chunk_processor",
    srcs = ["chunk_processor.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "text_generator",
    srcs = ["text_generator.py"],
    visibility = ["//visibility:public"],
    deps=[
        "//src/model:GPT",
    ],
)

py_library(
    name = "utility",
    srcs = ["utility.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "fundation_model_trainer",
    srcs = ["fundation_model_trainer.py"],
    visibility = ["//visibility:public"],

)