py_test(
    name = "test_document_processor",
    srcs = ["test_document_processor.py"],
    deps = [
       "//src:config", 
       "//src:document_processor",      
    ],
)

py_test(
    name = "test_token_processor",
    srcs = ["test_token_processor.py"],
    deps = [
       "//src:config", 
       "//src:token_processor",      
    ],
)

py_test(
    name = "test_chunk_processor",
    srcs = ["test_chunk_processor.py"],
    deps = [
       "//src:config", 
       "//src:chunk_processor",      
    ],
)

py_test(
    name = "test_text_generator",
    srcs = ["test_text_generator.py"],
    deps = [
       "//src:config", 
       "//src:text_generator",      
    ],
)