py_test(
    name = "test_document_processor",
    srcs = ["test_document_processor.py"],
    deps = [
       "//src:config", 
       "//src:document_processor",      
    ],
)

py_test(
    name = "test_token_processor",
    srcs = ["test_token_processor.py"],
    deps = [
       "//src:config", 
       "//src:token_processor",      
       "//src:document_processor",
    ],
)

py_test(
    name = "test_chunk_processor",
    srcs = ["test_chunk_processor.py"],
    deps = [
       "//src:config", 
       "//src:chunk_processor",      
    ],
)

py_test(
    name = "test_text_generator",
    srcs = ["test_text_generator.py"],
    deps = [
       "//src:config", 
       "//src:text_generator",  
       "//src:token_processor",    
       "//src:utility",
    ],
)

py_test(
    name = "test_utility",
    srcs = ["test_utility.py"],
    data = ["//model_weights:model_weights"],
    deps = [
       "//src:config", 
       "//src:utility",      
       "//src/model:GPT",
       "//src:token_processor",
       "//src:text_generator",
     
    ],
)

py_test(
    name = "test_fundation_model_trainer",
    srcs = ["test_fundation_model_trainer.py"],
    deps = [
        "//src:config", 
        "//src:fundation_model_trainer",      
        "//src/model:GPT",
        "//src:document_processor",     
        "//src:token_processor",
        "//src:chunk_processor",
        "//src:text_generator",
        "//src:utility",
    ],  
    )
