py_test(
    name = "test_text_generator",
    srcs = ["test_text_generator.py"],
    deps = [
       "//src:config", 
       "//src:text_generator",  
       "//src/preprocessor:token_processor",    
       "//src:utility",
    ],
)

py_test(
    name = "test_utility",
    srcs = ["test_utility.py"],
    data = ["//model_weights:model_weights"],
    deps = [
       "//src:config", 
       "//src:utility",      
       "//src/model:GPT",
       "//src/preprocessor:token_processor",   
       "//src:text_generator",
     
    ],
)

py_test(
    name = "test_fundation_model_trainer",
    srcs = ["test_fundation_model_trainer.py"],
    data = ["//dataset:dataset"],
    deps = [
        "//src:config", 
        "//src:fundation_model_trainer",      
        "//src/model:GPT",
        "//src/preprocessor:datasource_processor",     
        "//src/preprocessor:token_processor",
        "//src/preprocessor:chunk_processor",
        "//src:text_generator",
        "//src:utility",
    ],  
    )
