
py_test(
    name = "test_multihead_attention",
    srcs = ["test_multihead_attention.py"],
    deps = [
       "//src:config", 
       "//src/model:multihead_attention",      
    ],
)

py_test(
    name = "test_transformer_block",
    srcs = ["test_transformer_block.py"],
    deps = [
       "//src:config", 
       "//src/model:transformer_block",      
    ],
)

py_test(
    name = "test_GPT",
    srcs = ["test_GPT.py"],
    deps = [
       "//src:config", 
       "//src/model:GPT",      
    ],
)

py_test(
    name = "test_gpt_lr_scheduler",
    srcs = ["test_gpt_lr_scheduler.py"],
    deps = [

       "//src/model:gpt_lr_scheduler",      
    ],
)